# llm-client

./: .env.example  .gitignore  .profile  README.md  agent-config.json  agent-config.json.old  analyze_results.py  current_experiment.yaml  embed_results.py  experiment-perturber.yaml  main-chain-experiment.py  main-chain.py  main.py  memory.db  pyproject.toml  textual-direction-next.yaml  textual-direction-previous.yaml  textual-direction.yaml  tmp-entrypoint-summarize.py
experiments/: contractions.yaml  message-introspection.yaml  textual-direction-next.yaml  textual-direction-previous.yaml  thinking.yaml
llm_client/: config.py  llm_utils.py  logs.py  token_counter.py  utils.py
llm_client/abilities/: github_search.py
llm_client/agent/: agent.py  prompt.py
llm_client/agent/memory/: interaction.py  interaction_store.py  memory.py  message_store.py  remembered_interaction.py  sql_backed_memory_objects.py
llm_client/experiments/: information_extraction_system_prompt.py
llm_client/memory/: conversation_history.py  types.py
llm_client/my_chains/: experiment.py
llm_client/session/: chat_experiment.py  experiment_runner.py  session_base.py  system_prompt_experiment.py
llm_client/storage/: sqlite.py
llm_client/types/: openai.py
