[tool.poetry]
name = "llm_client"
version = "0.1.0"
description = ""
authors = ["Jason Cronquist <jcronq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.3.3"
openai = "^0.27.4"
seaborn = "^0.12.2"
pygithub = "^1.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
